syntax = "proto3";

package caculator;

option go_package = "./gen; calcpb";


service CaculatorService {
    rpc Add (AddRequest) returns (AddResponse);
    rpc FabonacciStreams (AddFabonachiStreamRequest) returns (stream AddFabonachiStreamResponse); // server side streaming
    rpc ClientSendNumber (stream SendRequestNum) returns (SendResponseNum); // client side streaming 
    rpc Chat (stream Message) returns (stream Message); // bidirectional streaming 
}

message Message{
    string message = 1;
}

message SendRequestNum{
    int32 number = 1;
}

message SendResponseNum {
    int32 number = 1;
    int32 sum = 2;
}


message AddRequest {
    int32 a = 1;
    int32 b = 2;
}

message AddResponse {
    int32 sum = 1;
}


message AddFabonachiStreamRequest{
    int32 n = 1; // number of fub.. numbers to generate
}

message AddFabonachiStreamResponse{
    int32 number = 1; // individual fab.. number
}